<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Backboard</string>
    <string name="action_move">Move</string>
    <string name="action_snap">Snap</string>
    <string name="action_scale">Scale</string>
    <string name="action_bloom">Bloom</string>
    <string name="action_flower">Flower</string>
    <string name="action_appear">Appear</string>
    <string name="action_explosion">Explosion</string>
    <string name="action_follow">Follow</string>
    <string name="action_zoom">Zoom</string>
    <string name="action_constrained">Constrain</string>
    <string name="action_rebound">Rebound</string>

</resources>
